--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+title: Kirk M. Lundblade # name of the site
+author: Kirk Matthew Lundblade # name of site's author
+email: casus_scribere@gmail.com # email of site's author
+url: https://casusscribere.github.io # root address of the site
+baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  The personal website for Dr. Kirk Matthew Lundblade (not the other Kirk Matthew Lundblade)
 
 permalink: /:slug.html
 
