--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,8 +2,9 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: all posts
+  - title: recent publications
     post_list:
+      category: publication
       limit: 5
       show_more: true
       show_more_text: See archive...
